--- a/src/sass/global/_forms.scss
+++ b/src/sass/global/_forms.scss
@@ -15,13 +15,12 @@ select {
   appearance: none;
 }
 
-input[type='number'] {
-  input::-webkit-outer-spin-button,
-  input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-  }
+// Hide increment and decrement spin buttons
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 // Prevent yellow background-color on chrome auto-fill
