--- a/src/components/common/HtmlContent.scss
+++ b/src/components/common/HtmlContent.scss
@@ -40,6 +40,19 @@
     }
   }
 
+  h3 {
+    @include h3();
+    margin-top: 40px;
+
+    @include media-down(mobile) {
+      margin-top: 30px;
+    }
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+
   a {
     text-decoration: underline;
 
