--- a/src/components/Legal/LegalPageNavigation.scss
+++ b/src/components/Legal/LegalPageNavigation.scss
@@ -50,6 +50,9 @@
       display: block;
       height: 10px;
       background-color: $primary;
+      // transform: scaleX(0);
+      transition: transform 0.3s ease;
+      transform-origin: left;
     }
   }
 }
