--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -9,238 +9,300 @@
     padding: 80px 0;
   }
 
-  .outcome-elaboration {
-    .title {
-      @include h2();
-      margin-bottom: 20px;
+  .diagram {
+    .outcome-elaboration {
+      .title {
+        @include h2();
+        margin-bottom: 20px;
 
-      span {
-        background: linear-gradient(to right, rgba($white ,0) 50%, rgba($tertiary, 1.0) 50%);
-        background-size: 200%;
-        background-position: 0 0;
-        transition-property: all;
-        transition-timing-function: ease-out;
-        transition-duration: 1s;
-        transition-delay: 1s;
+        span {
+          background: linear-gradient(to right, rgba($white ,0) 50%, rgba($tertiary, 1.0) 50%);
+          background-size: 200%;
+          background-position: 0 0;
+          transition-property: all;
+          transition-timing-function: ease-out;
+          transition-duration: 1s;
+          transition-delay: 1s;
 
-        &.visible {
-          background-position: -100% 0;
+          &.visible {
+            background-position: -100% 0;
+          }
         }
       }
     }
-  }
 
-  .outcome-buttons {
-    .outcome-selector {
-      background-color: $white;
-
-      .icon-container {
-        width: 65px;
-        height: 65px;
-        border: 3px solid $secondary;
+    .outcome-buttons {
+      .outcome-selector {
         background-color: $white;
-        transition: background-color 0.3s ease;
-        border-radius: 50%;
-        position: relative;
-        z-index: 1;
 
-        @include media-down(mobile) {
-          width: 50px;
-          height: 50px;
-        }
-
-        &:before {
-          @include center-align(absolute);
-          content: '';
-          height: 140%;
-          width: 140%;
-          border: 2px dashed $secondary;
+        .icon-container {
+          width: 65px;
+          height: 65px;
+          border: 3px solid $secondary;
+          background-color: $white;
+          transition: background-color 0.3s ease;
           border-radius: 50%;
-          opacity: 0;
-          transition: opacity 0.5s ease;
-          will-change: transform;
+          position: relative;
+          z-index: 1;
 
           @include media-down(mobile) {
-            height: 130%;
-            width: 130%;
-          }
-        }
-      }
-
-      .hover-label {
-        position: absolute;
-        @include h4();
-        color: $primary;
-        opacity: 0;
-        z-index: 2;
-        padding: 0 5px;
-        transition: opacity 0.3s ease, padding 0.3s ease;
-        padding: 0 5px;
-
-        @include media-down(mobile) {
-          display: none;
-        }
-      }
-
-      &.active {
-        .icon-container {
-          background-color: $secondary;
-
-          .icon {
-            svg {
-              fill: $white;
-            }
+            width: 50px;
+            height: 50px;
           }
 
           &:before {
-            opacity: 1;
+            @include center-align(absolute);
+            content: '';
+            height: 140%;
+            width: 140%;
+            border: 2px dashed $secondary;
+            border-radius: 50%;
+            opacity: 0;
+            transition: opacity 0.5s ease;
+            will-change: transform;
+
+            @include media-down(mobile) {
+              height: 130%;
+              width: 130%;
+            }
           }
         }
 
         .hover-label {
-          opacity: 0 !important;
+          position: absolute;
+          @include h4();
+          color: $primary;
+          opacity: 0;
+          z-index: 2;
+          padding: 0 5px;
+          transition: opacity 0.3s ease, padding 0.3s ease;
+          padding: 0 5px;
+
+          @include media-down(mobile) {
+            display: none;
+          }
+        }
+
+        &.active {
+          .icon-container {
+            background-color: $secondary;
+
+            .icon {
+              svg {
+                fill: $white;
+              }
+            }
+
+            &:before {
+              opacity: 1;
+            }
+          }
+
+          .hover-label {
+            opacity: 0 !important;
+          }
+
+          &:hover {
+            cursor: default;
+
+            .icon-container {
+              &:before {
+                animation: none;
+              }
+            }
+          }
         }
 
         &:hover {
-          cursor: default;
-
           .icon-container {
             &:before {
-              animation: none;
+              opacity: 1;
+              animation: rotate 5s infinite;
+              animation-timing-function: linear;
+              transform-origin: 0 0;
+
+              @keyframes rotate {
+                from {
+                  transform: rotate(0deg) translateX(-50%) translateY(-50%);
+                }
+                to {
+                  transform: rotate(360deg) translateX(-50%) translateY(-50%);
+                }
+              }
             }
           }
-        }
-      }
-
-      &:hover {
-        .icon-container {
-          &:before {
+          .hover-label {
             opacity: 1;
-            animation: rotate 5s infinite;
-            animation-timing-function: linear;
-            transform-origin: 0 0;
-
-            @keyframes rotate {
-              from {
-                transform: rotate(0deg) translateX(-50%) translateY(-50%);
-              }
-              to {
-                transform: rotate(360deg) translateX(-50%) translateY(-50%);
-              }
-            }
+            padding: 0px 5px !important;
           }
         }
-        .hover-label {
-          opacity: 1;
-          padding: 0px 5px !important;
-        }
-      }
 
-      .icon {
-        @include center-align(absolute);
-        width: 50%;
-        height: 50%;
-
-        @include media-down(mobile) {
-          width: 60%;
-          height: 60%;
-        }
-
-        svg {
+        .icon {
           @include center-align(absolute);
-          height: 100%;
-          width: 100%;
-          fill: $secondary;
-          transition: fill 0.3s ease;
+          width: 50%;
+          height: 50%;
+
+          @include media-down(mobile) {
+            width: 60%;
+            height: 60%;
+          }
+
+          svg {
+            @include center-align(absolute);
+            height: 100%;
+            width: 100%;
+            fill: $secondary;
+            transition: fill 0.3s ease;
+          }
         }
       }
     }
-  }
-
-  .diagram {
-
-    .circle {
-      width: 650px;
-      height: 650px;
-      border-radius: 50%;
-      border: 3px $tertiary solid;
-      margin: 0 auto;
-      position: relative;
-      z-index: 6;
-
-      @include media-down(tablet) {
-        width: calc(60vw - 40px);
-        height: calc(60vw - 40px);
-      }
 
 
-      .outcome-buttons {
-        .outcome-selector {
+    &.diagram-desktop {
+      .circle {
+        width: 650px;
+        height: 650px;
+        border-radius: 50%;
+        border: 3px $tertiary solid;
+        margin: 0 auto;
+        position: relative;
+        z-index: 6;
+
+        @include media-down(tablet) {
+          width: calc(60vw - 40px);
+          height: calc(60vw - 40px);
+        }
+
+
+        .outcome-buttons {
+          .outcome-selector {
+            position: absolute;
+            padding: 20px;
+
+            &:nth-child(1) {
+              top: 0;
+              left: 50%;
+              transform: translateY(-50%) translateX(-50%);
+
+              .hover-label {
+                top: 50%;
+                left: auto;
+                right: 0;
+                transform: translateY(-50%) translateX(100%);
+                padding-left: 10px;
+              }
+            }
+            &:nth-child(2) {
+              top: 50%;
+              left: auto;
+              right: 0;
+              transform: translateY(-50%) translateX(50%);
+
+              .hover-label {
+                top: 50%;
+                left: auto;
+                right: 0;
+                transform: translateY(-50%) translateX(100%);
+                padding-left: 10px;
+              }
+            }
+            &:nth-child(3) {
+              bottom: 0;
+              left: 50%;
+              transform: translateY(50%) translateX(-50%);
+
+              .hover-label {
+                top: 50%;
+                left: 0;
+                text-align: right;
+                transform: translateY(-50%) translateX(-100%);
+                padding-right: 10px;
+              }
+            }
+            &:nth-child(4) {
+              top: 50%;
+              left: 0;
+              transform: translateY(-50%) translateX(-50%);
+
+              .hover-label {
+                top: 50%;
+                left: 0;
+                text-align: right;
+                transform: translateY(-50%) translateX(-100%);
+                padding-right: 10px;
+              }
+            }
+
+
+          }
+        }
+
+        .outcome-illustration {
+          @include center-align(absolute);
+          width: 60%;
+          height: 60%;
+
+          svg {
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+          }
+
+          &:before {
+            content: '';
+            @include center-align(absolute);
+            width: 60%;
+            height: 60%;
+            background-image: url('../../assets/images/outcome-placeholder.svg');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            opacity: 1;
+            transition: opacity 0.3s ease;
+          }
+
+          &.visible {
+            svg {
+              opacity: 1;
+            }
+            &:before {
+              opacity: 0;
+            }
+          }
+        }
+
+        .outcome-elaboration {
           position: absolute;
+          top: auto;
+          left: auto;
+          bottom: 0;
+          right: 0;
+          width: 55%;
+          max-width: 400px;
+          background-color: $white;
+          transform: translateX(50%);
           padding: 20px;
 
-          &:nth-child(1) {
-            top: 0;
-            left: 50%;
-            transform: translateY(-50%) translateX(-50%);
-
-            .hover-label {
-              top: 50%;
-              left: auto;
-              right: 0;
-              transform: translateY(-50%) translateX(100%);
-              padding-left: 10px;
-            }
-          }
-          &:nth-child(2) {
-            top: 50%;
-            left: auto;
-            right: 0;
-            transform: translateY(-50%) translateX(50%);
-
-            .hover-label {
-              top: 50%;
-              left: auto;
-              right: 0;
-              transform: translateY(-50%) translateX(100%);
-              padding-left: 10px;
-            }
-          }
-          &:nth-child(3) {
-            bottom: 0;
-            left: 50%;
-            transform: translateY(50%) translateX(-50%);
-
-            .hover-label {
-              top: 50%;
-              left: 0;
-              text-align: right;
-              transform: translateY(-50%) translateX(-100%);
-              padding-right: 10px;
-            }
-          }
-          &:nth-child(4) {
-            top: 50%;
-            left: 0;
-            transform: translateY(-50%) translateX(-50%);
-
-            .hover-label {
-              top: 50%;
-              left: 0;
-              text-align: right;
-              transform: translateY(-50%) translateX(-100%);
-              padding-right: 10px;
-            }
+          @include media-down(tablet) {
+            width: 65%;
+            transform: translateX(50%) translateY(20%);
           }
 
-
+          @include media-down(small-tablet) {
+            width: 70%;
+            transform: translateX(50%) translateY(50%);
+          }
         }
       }
+    }
 
+    &.diagram-mobile {
       .outcome-illustration {
-        @include center-align(absolute);
-        width: 60%;
-        height: 60%;
+        width: 70%;
+        height: 70%;
+        margin: 0 auto -10vw;
 
         svg {
           width: 100%;
@@ -252,8 +314,8 @@
         &:before {
           content: '';
           @include center-align(absolute);
-          width: 60%;
-          height: 60%;
+          width: 70%;
+          height: 70%;
           background-image: url('../../assets/images/outcome-placeholder.svg');
           background-size: contain;
           background-repeat: no-repeat;
@@ -272,123 +334,66 @@
         }
       }
 
-      .outcome-elaboration {
-        position: absolute;
-        top: auto;
-        left: auto;
-        bottom: 0;
-        right: 0;
-        width: 55%;
-        max-width: 400px;
-        background-color: $white;
-        transform: translateX(50%);
-        padding: 20px;
-
-        @include media-down(tablet) {
-          width: 65%;
-          transform: translateX(50%) translateY(20%);
-        }
-
-        @include media-down(small-tablet) {
-          width: 70%;
-          transform: translateX(50%) translateY(50%);
-        }
-      }
-    }
-  }
-
-  .diagram-mobile {
-    .outcome-illustration {
-      width: 70%;
-      height: 70%;
-      margin: 0 auto -10vw;
-
-      svg {
+      .half-circle {
         width: 100%;
-        height: 100%;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-      }
+        height: 27.78vw;
+        position: relative;
+        margin-bottom: 80px;
 
-      &:before {
-        content: '';
-        @include center-align(absolute);
-        width: 70%;
-        height: 70%;
-        background-image: url('../../assets/images/outcome-placeholder.svg');
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-        opacity: 1;
-        transition: opacity 0.3s ease;
-      }
-
-      &.visible {
         svg {
-          opacity: 1;
+          @include center-align(absolute);
+          width: 100%;
+          height: auto;
         }
-        &:before {
-          opacity: 0;
+
+        .outcome-buttons {
+          width: 100%;
+          max-width: 400px;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          @include horizontal-align(absolute);
+          top: auto;
+          bottom: 0;
+          padding: 0px 20px;
+
+          .outcome-selector {
+            &:nth-child(1) {
+              transform: translateY(-50%);
+            }
+            &:nth-child(2) {
+              transform: translateY(calc(50% - 3px));
+            }
+            &:nth-child(3) {
+              transform: translateY(calc(50% - 3px));
+            }
+            &:nth-child(4) {
+              transform: translateY(-50%);
+            }
+
+            .icon-container {
+
+            }
+          }
+        }
+      }
+
+      .outcome-elaboration {
+        padding: 0 20px;
+        max-width: 450px;
+        margin: 0 auto;
+
+        .title {
+          text-align: center;
+        }
+
+        .html-content {
+          text-align: center;
         }
       }
     }
 
-    .half-circle {
-      width: 100%;
-      height: 27.78vw;
-      position: relative;
-      margin-bottom: 80px;
-
-      svg {
-        @include center-align(absolute);
-        width: 100%;
-        height: auto;
-      }
-
-      .outcome-buttons {
-        width: 100%;
-        max-width: 400px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        @include horizontal-align(absolute);
-        top: auto;
-        bottom: 0;
-        padding: 0px 20px;
-
-        .outcome-selector {
-          &:nth-child(1) {
-            transform: translateY(-50%);
-          }
-          &:nth-child(2) {
-            transform: translateY(calc(50% - 3px));
-          }
-          &:nth-child(3) {
-            transform: translateY(calc(50% - 3px));
-          }
-          &:nth-child(4) {
-            transform: translateY(-50%);
-          }
-
-          .icon-container {
-
-          }
-        }
-      }
-    }
-
-    .outcome-elaboration {
-      padding: 0 20px;
-      max-width: 450px;
-      margin: 0 auto;
-
-      .title {
-        text-align: center;
-      }
-
-      .html-content {
-        text-align: center;
-      }
-    }
   }
+
+
 }
